--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -4,15 +4,19 @@
   box-sizing: border-box;
 }
 
-#myButton {
+.btn {
 
-  font-family:Arial, Helvetica, sans-serif;
-  font-size: larger;
-  height: 25px;
-  width: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20%;
+  height: 40px;
+  border-radius: 5px;
   background-color: rgb(91, 145, 185);
   text-decoration-skip: skip;
   border-radius: 3px;
-  border-style: none;
-
+  border-style: solid;
+  box-shadow: 10px 10px 10px 5px rgba(27,60,148,0.75);
+  -webkit-box-shadow: 10px 10px 22px 5px rgba(27,60,148,0.75);
+  -moz-box-shadow: 10px 10px 22px 5px rgba(27,60,148,0.75);
 }
