--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -5,18 +5,24 @@
 }
 
 .btn {
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 20%;
-  height: 40px;
+  padding: 15px 40px;
+  font-size: 20px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  background-color: #4895D7;
+  border: none;
   border-radius: 5px;
-  background-color: rgb(91, 145, 185);
-  text-decoration-skip: skip;
-  border-radius: 3px;
-  border-style: solid;
-  box-shadow: 10px 10px 10px 5px rgba(27,60,148,0.75);
-  -webkit-box-shadow: 10px 10px 22px 5px rgba(27,60,148,0.75);
-  -moz-box-shadow: 10px 10px 22px 5px rgba(27,60,148,0.75);
+  box-shadow: 3 9px #999;
+}
+
+.btn:hover {
+  background-color: #4895D7;
+}
+
+.btn:active {
+  background-color: #4895D7;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
